Sign in con google

--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 PORT=3005
 DB_CNN=mongodb+srv://menta_usr:cwMNBeqBIYqwGUPs@cluster0.somxl.mongodb.net/mentadb
 JWT_SECRET=LlaveSecreta1234567890
+
+GOOGLE_ID=934127508309-lpeq8j27mdmkjcikjpupse410l3caloh.apps.googleusercontent.com
+GOOGLE_SECRET=vZNi5DztWwWw8CsOmJZMCUNH
