--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=3005
-DB_CNN=mongodb+srv://menta_usr:cwMNBeqBIYqwGUPs@cluster0.somxl.mongodb.net/mentadb
+DB_CNN=mongodb+srv://menta_usr:TvDLFazaPwlwL77l@cluster0.somxl.mongodb.net/mentadb
 JWT_SECRET=LlaveSecreta1234567890
 
 GOOGLE_ID=934127508309-lpeq8j27mdmkjcikjpupse410l3caloh.apps.googleusercontent.com
