--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "google-auth-library": "^7.10.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.8",
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.16",
+    "uuid": "^8.3.2"
   }
 }
