--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=3005
-DB_CNN=mongodb+srv://menta_usr:BnE1Vju3r1VOn6Ja@cluster0.somxl.mongodb.net/mentadb
+DB_CNN=mongodb+srv://menta_usr:hGNtcOhWcXUddfn5@cluster0.somxl.mongodb.net/test
 JWT_SECRET=LlaveSecreta1234567890
 
 GOOGLE_ID=934127508309-lpeq8j27mdmkjcikjpupse410l3caloh.apps.googleusercontent.com
